# fortune-telling-core-interpreter

./: .gitignore  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.agents/docs/: ARCHITECTURE.md  JOURNAL.md  OVERVIEW.md  TODO.md
.agents/docs/LTM/: INDEX.md  interpretation-localization-synthesis.md  locale-resolution-and-interpretation-registry.md
.agents/skills/deep-sleep/: SKILL.md
.agents/skills/distill-memories/: SKILL.md
.agents/skills/good-sleep/: SKILL.md
.agents/skills/reconcile-journal-ltm/: SKILL.md
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: index.md
docs/api/: bundles.md  interpretation.md  locale.md  registry.md  symbol_interpretation.md
docs/api/datasets/: astrology.md  can_chi.md  celtic_tree.md  chaldean_numerology.md  cjk_name_strokes.md  cyrillic_pythagorean.md  cyrillic_slavonic_numerals.md  dominoes.md  four_pillars.md  geomancy.md  greek_isopsephy.md  haab.md  iching.md  koyomi.md  lenormand.md  name_numerology.md  nine_star_ki.md  numerology.md  runes.md  sanmeigaku.md  sukuyo.md  tarot.md  thaksa.md  tzolkin.md  weton.md  zi_wei.md
src/fortune_telling_core/: _interpretation_bundle.py  _interpretation_registry.py  _interpreter_cli.py  _locale.py  _symbol_interpretation.py  interpretation.py
src/fortune_telling_core/traditions/astrology/interpretation/: __init__.py  aspects.py  houses.py  signs.py
src/fortune_telling_core/traditions/can_chi/interpretation/: __init__.py
src/fortune_telling_core/traditions/celtic_tree/interpretation/: __init__.py
src/fortune_telling_core/traditions/chaldean_numerology/interpretation/: __init__.py
src/fortune_telling_core/traditions/cjk_name_strokes/interpretation/: __init__.py  stroke_count.py
src/fortune_telling_core/traditions/cyrillic_pythagorean/interpretation/: __init__.py
src/fortune_telling_core/traditions/cyrillic_slavonic_numerals/interpretation/: __init__.py
src/fortune_telling_core/traditions/dominoes/interpretation/: __init__.py
src/fortune_telling_core/traditions/four_pillars/interpretation/: __init__.py  branches.py  stems.py  ten_gods.py
src/fortune_telling_core/traditions/geomancy/interpretation/: __init__.py
src/fortune_telling_core/traditions/greek_isopsephy/interpretation/: __init__.py
src/fortune_telling_core/traditions/haab/interpretation/: __init__.py
src/fortune_telling_core/traditions/iching/interpretation/: __init__.py
src/fortune_telling_core/traditions/koyomi/interpretation/: __init__.py
src/fortune_telling_core/traditions/lenormand/interpretation/: __init__.py
src/fortune_telling_core/traditions/name_numerology/interpretation/: __init__.py
src/fortune_telling_core/traditions/nine_star_ki/interpretation/: __init__.py  positions.py  stars.py
src/fortune_telling_core/traditions/numerology/interpretation/: __init__.py
src/fortune_telling_core/traditions/runes/interpretation/: __init__.py
src/fortune_telling_core/traditions/sanmeigaku/interpretation/: __init__.py
src/fortune_telling_core/traditions/sukuyo/interpretation/: __init__.py
tests/: test_cli.py
tests/core/: test_interpretation.py  test_interpretation_bundle.py  test_locale.py
tests/traditions/: test_astrology_aspects.py  test_cjk_name_strokes_stroke_count.py  test_locale_datasets.py  test_new_tradition_datasets.py  test_zi_wei_palace.py
tests/traditions/astrology/: test_interpretation_aspects.py  test_interpretation_sun_sign.py
tests/traditions/tarot/: test_interpretation_lookup.py
(+550 files in other folders)
