[build-system]
requires = ["hatchling>=1.30", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "fortune-telling-core-interpreter"
# Version is derived from the git tag (vX.Y.Z) at build time by hatch-vcs.
dynamic = ["version"]
description = "Interpretation contracts, locale resolution, and reference datasets for fortune-telling-core readings."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Moriyoshi Koizumi", email = "mozo@mozo.jp" }]
keywords = ["fortune-telling", "divination", "interpretation", "tarot", "astrology", "i18n"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
# Draw.extras (structured astrology aspects) and ReadingRequest.as_of are required.
dependencies = ["fortune-telling-core>=1.1.0"]

[project.scripts]
fortune-telling-interpret = "fortune_telling_core._interpreter_cli:main"

[project.urls]
Homepage = "https://github.com/moriyoshi/fortune-telling-core-interpreter"
Documentation = "https://moriyoshi.github.io/fortune-telling-core-interpreter"
Repository = "https://github.com/moriyoshi/fortune-telling-core-interpreter"
Issues = "https://github.com/moriyoshi/fortune-telling-core-interpreter/issues"

[project.optional-dependencies]
dev = [
  "mypy>=2.1",
  "pytest>=9.0",
  "ruff>=0.15",
  "twine>=6.2",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7",
  "mkdocstrings[python]>=1.0",
  "ruff>=0.15",
]
release = [
  "build>=1.3",
  "twine>=6.2",
]

[tool.hatch.version]
source = "vcs"

# Write the VCS-derived version into a generated module so `__version__` is a
# real source-of-truth import, not a hand-maintained literal. The file is a
# build artifact (git-ignored); hatch-vcs regenerates it on every build/install.
# It must NOT be named `_version.py`: that path is owned by the sibling
# `fortune-telling-core` package in the shared `fortune_telling_core` namespace.
[tool.hatch.build.hooks.vcs]
version-file = "src/fortune_telling_core/_interpreter_version.py"

[tool.hatch.build]
exclude = [
  "/.agents",
  "/.agents-workspace",
  "/.claude",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fortune_telling_core"]

# Matrixed task runner: run the suite (and full gate) against each supported Python.
#   hatch run test:run        # pytest on 3.12, 3.13, and 3.14
#   hatch run test:check      # ruff + mypy + pytest on each version
#   hatch run +py=3.14 test:run   # a single version
[tool.hatch.envs.test]
features = ["dev"]

[tool.hatch.envs.test.scripts]
run = "pytest {args}"
lint = "ruff check ."
typecheck = "mypy src tests"
check = [
  "ruff format --check .",
  "ruff check .",
  "mypy src tests",
  "pytest {args}",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.12", "3.13", "3.14"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src", "../fortune-telling-core/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
